# multithreaded-file-handler

./: CMakeLists.txt  README.md  main.cpp
